added edit item view

--- a/client/src/less/materialize-overrides.less
+++ b/client/src/less/materialize-overrides.less
@@ -3,8 +3,22 @@
   .container {
     width: 90%;
   }
+}
 
-  h1 {
-    font-size: 2rem;
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+.card-content {
+  > h2:first-child {
+    margin-top: 0;
   }
+}
+
+.row:last-child {
+  margin-bottom: 0;
 }
