added modal component and updated edit item to use it

--- a/client/src/less/materialize-overrides.less
+++ b/client/src/less/materialize-overrides.less
@@ -13,9 +13,15 @@ h2 {
   font-size: 1.5rem;
 }
 
-.card-content {
+.card-content, .modal-container {
   > h2:first-child {
     margin-top: 0;
+  }
+}
+
+.modal-container {
+  .container {
+    width: 100%;
   }
 }
 
