added loading component for items list loading

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -30,4 +30,5 @@
 @import "./helpers/spacing.less";
 @import "./core/modal.less";
 @import "./core/toasts.less";
+@import "./core/loading.less";
 @import "home.less";
