updated add item button styling

--- a/client/src/less/core/forms.less
+++ b/client/src/less/core/forms.less
@@ -16,10 +16,10 @@
   display: inline-block;
   width: 120px;
   height: 36px;
-  padding: 0px 30px;
+  padding: 0px 5px;
   text-align: center;
   vertical-align: middle;
-  color: #ffffff;
+  color: #f1c8cd !important;
   font-size: 15px;
   line-height: 36px;
   letter-spacing: 0.5px;
@@ -37,16 +37,17 @@
   perspective-origin: 60px 18px;
   transform-origin: 60px 18px;
 
-  &:hover {
-    background-color: #97040b;
-  }
-
   &.ss-btn-secondary {
     background-color: #686565;
-    color: #ffffff !important;
+    color: #eeeeee !important;
 
     &:hover {
       background-color: #181717;
     }
+  }
+
+  &:hover {
+    background-color: #97040b;
+    color: #ffffff !important;
   }
 }
