--- a/client/src/less/nav.less
+++ b/client/src/less/nav.less
@@ -6,6 +6,10 @@
   .navbar-brand i {
     font-size: 45px;
   }
+
+  .nav-link {
+    text-transform: uppercase;
+  }
 }
 
 .ss-navbar, .ss-footer {
