updated header and footer styling

--- a/client/src/less/nav.less
+++ b/client/src/less/nav.less
@@ -1,10 +1,15 @@
 .ss-navbar {
-  min-height: 4rem;
+  height: 60px;
+  padding: 0;
   background-color: #c4373e;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
 
-  .navbar-brand i {
-    font-size: 45px;
+  .navbar-brand {
+    padding: 0;
+    margin: 10px 0 0;
+    i {
+      font-size: 45px;
+    }
   }
 
   .nav-link {
@@ -18,7 +23,7 @@
   a {
     color: #f1c8cd;
 
-    &:hover {
+    &:hover, &.router-link-exact-active {
       color: #ffffff;
     }
   }
@@ -31,13 +36,13 @@ html {
   min-height: 100%;
 }
 body {
-  margin-bottom: 90px; /* Margin bottom by footer height */
+  margin-bottom: 70px; /* Margin bottom by footer height */
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  height: 45px; /* Set the fixed height of the footer here */
+  line-height: 45px; /* Vertically center the text there */
   background-color: #c4373e;
 }
