--- a/client/src/less/nav.less
+++ b/client/src/less/nav.less
@@ -1,5 +1,5 @@
 .ss-navbar {
-  height: 60px;
+  min-height: 60px;
   padding: 0;
   background-color: #c4373e;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
@@ -7,6 +7,7 @@
   .navbar-brand {
     padding: 0;
     margin: 10px 0 0;
+
     i {
       font-size: 45px;
     }
@@ -24,7 +25,7 @@
     color: #f1c8cd;
 
     &:hover, &.router-link-exact-active {
-      color: #ffffff;
+      color: #ffffff !important;
     }
   }
 }
@@ -45,4 +46,13 @@ body {
   height: 45px; /* Set the fixed height of the footer here */
   line-height: 45px; /* Vertically center the text there */
   background-color: #c4373e;
+}
+
+/* overwrite bootstrap default
+-------------------------------------------------- */
+@media (max-width: 767.98px) {
+  .navbar-expand-md > .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
