--- a/client/src/less/core/loading.less
+++ b/client/src/less/core/loading.less
@@ -1,7 +1,9 @@
+@import "../theme.less";
+
 .loading-wrapper {
   .loading {
-    border: 5px solid #f3f3f3; /* Light grey */
-    border-top: 5px solid #c4373e;
+    border: 5px solid @light-gray;
+    border-top: 5px solid @base-color;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -27,7 +29,7 @@
       width: 35px;
       height: 35px;
     }
-    
+
     &.centered {
       min-height: 35px;
 
@@ -41,7 +43,7 @@
   &.card {
     min-height: 200px;
   }
-  
+
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
