updated toasts styling

--- a/client/src/less/theme.less
+++ b/client/src/less/theme.less
@@ -4,6 +4,8 @@
 @dark-gray: #686565;
 @dark-gray-bg-text-color: #eeeeee;
 @white: #ffffff;
+@success: #28a745;
+@error: #dc3545;
 
 .ss-border {
   border: none;
