--- a/client/src/less/core/toasts.less
+++ b/client/src/less/core/toasts.less
@@ -1,37 +1,38 @@
 .toasts-container {
   position: absolute;
-  top: 75px;
+  bottom: 47px;
   right: 0;
 
   .vue-toast {
-    background-color: #039be5;
-    color: #ffffff;
     padding: 10px;
     margin: 10px;
     min-width: 250px;
     position: relative;
+    background-color: white;
+    box-shadow: 0px 1px 3px grey;
     transition: 400ms cubic-bezier(0.17, 0.67, 0.17, 0.98);
     transition-property: opacity, margin, transform;
+    z-index: 3;
 
     &.toast-success {
-      background-color: green;
+      border-top: solid 5px @success;
     }
 
     &.toast-error {
-      background-color: red;
+      border-top: solid 5px @error;
     }
 
     .toast-close {
       position: absolute;
       top: 2px;
       right: 3px;
-      cursor: pointer;
-      color: #ffffff;
 
       i {
         font-size: 13px;
       }
     }
+
+    .ss-border
   }
 
   // transition styles
