style updates - colors, shadow

--- a/client/src/less/nav.less
+++ b/client/src/less/nav.less
@@ -6,7 +6,6 @@
   min-height: 55px;
   padding: 0;
   background-color: @base-color;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
 
   .navbar-brand {
     padding: 0;
@@ -29,6 +28,8 @@
   .navbar-nav {
     margin-right: -0.5rem;
   }
+
+  .ss-shadow
 }
 
 /* Footer - Sticky footer
@@ -48,6 +49,8 @@ body {
   line-height: 45px; /* Vertically center the text there */
   background-color: @base-color;
   font-size: 0.9rem;
+
+  .ss-shadow
 }
 
 /* Header & Footer - Common styles
