--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -8,6 +8,7 @@
 html body {
   font-family: 'PT Sans', sans-serif;
   background-color: @light-gray;
+  color: @black;
 }
 
 section {
@@ -61,6 +62,12 @@ h2 {
 /* Cards
 -------------------------------------------------- */
 .card {
+  .card-body {
+    > *:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   .ss-border
 }
 
