--- a/client/src/less/theme.less
+++ b/client/src/less/theme.less
@@ -1,16 +1,23 @@
 @base-color: #c4373e;
 @base-bg-text-color: rgba(255,255,255,.8);
-@light-gray: #f3f3f3;
+@light-gray: #f5f6f7;
 @dark-gray: #686565;
 @dark-gray-bg-text-color: #eeeeee;
 @white: #ffffff;
+@black: #555555;
 @success: #28a745;
 @error: #dc3545;
 
+.ss-shadow {
+  box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 3px -2px rgba(0,0,0,.12);
+}
+
 .ss-border {
   border: none;
-  border-radius: 0;
+  border-radius: 0 0 3px 3px;
   border-top: solid 5px @base-color;
+
+  .ss-shadow
 }
 
 .ss-form-control-border {
