--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -82,3 +82,12 @@ h2 {
 
   .ss-border
 }
+
+/* Transitions
+-------------------------------------------------- */
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .3s ease;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
