auth setup with passport js

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -4,6 +4,7 @@
 @import "./core/loading.less";
 @import "./core/forms.less";
 @import "nav.less";
+@import "auth.less";
 
 html body {
   font-family: 'PT Sans', sans-serif;
