--- a/client/src/less/theme.less
+++ b/client/src/less/theme.less
@@ -1,4 +1,4 @@
-@base-color: #c4373e;
+@base-color: rgb(35, 93, 194);
 @base-bg-text-color: rgba(255,255,255,.8);
 @light-gray: #f5f6f7;
 @dark-gray: #686565;
