--- a/client/src/less/nav.less
+++ b/client/src/less/nav.less
@@ -5,7 +5,7 @@
 .navbar {
   min-height: 55px;
   padding: 0;
-  background-color: @base-color;
+  background-color: transparent;
 
   .navbar-brand {
     padding: 0;
@@ -47,7 +47,7 @@ body {
   width: 100%;
   height: 45px; /* Set the fixed height of the footer here */
   line-height: 45px; /* Vertically center the text there */
-  background-color: @base-color;
+  background-color: transparent;
   font-size: 0.9rem;
 
   .ss-shadow
