--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -55,7 +55,7 @@ h2 {
 .btn-secondary {
   background-color: @dark-gray;
 
-  &:hover {
+  &:hover:enabled {
     background-color: darken(@dark-gray, 10%);
   }
 }
