Login frontend validations

--- a/client/src/less/theme.less
+++ b/client/src/less/theme.less
@@ -24,6 +24,11 @@
   border: none;
   border-radius: 0;
   border-left: solid 3px @base-color;
+
+  &.error {
+    border: solid 1px @error;
+    border-left: solid 3px @error;
+  }
 }
 
 .ss-btn {
