user profile page updates, minor cleanup

--- a/client/src/less/core/forms.less
+++ b/client/src/less/core/forms.less
@@ -13,3 +13,13 @@
 
   .ss-form-control-border
 }
+
+.form-control-plaintext {
+  width: auto;
+  display: inline-block;
+}
+
+label {
+  width: 100px;
+  display: inline-block;
+}
