--- a/client/src/less/core/forms.less
+++ b/client/src/less/core/forms.less
@@ -11,15 +11,33 @@
     .ss-form-control-border
   }
 
+  .form-with-label & {
+    width: 250px;
+    display: inline-block;
+  }
+
   .ss-form-control-border
 }
 
 .form-control-plaintext {
-  width: auto;
+  max-width: 250px;
   display: inline-block;
 }
 
 label {
   width: 100px;
   display: inline-block;
+  margin-bottom: 0;
+}
+
+.form-btn-group {
+  margin-top: 15px;
+
+  .form-with-label & {
+    margin-left: 103px;
+  }
+
+  button {
+    margin-right: 7px;
+  }
 }
