refactor alert message, minor cleanup

--- a/client/src/less/nav.less
+++ b/client/src/less/nav.less
@@ -53,6 +53,10 @@
       .dropdown-item {
         color: @black;
 
+        &:active {
+          background-color: @light-gray;
+        }
+
         &.router-link-exact-active {
           color: @base-color;
         }
