--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -118,3 +118,16 @@ h2 {
     }
   }
 }
+
+/* Alert
+-------------------------------------------------- */
+.alert {
+  border: none;
+  border-radius: 0;
+  border-left: solid 3px @base-color;
+  margin: 1rem 0;
+
+  form & {
+    padding: .25rem .5rem;
+  }
+}
