added select dropdown component

--- a/client/src/less/core/forms.less
+++ b/client/src/less/core/forms.less
@@ -1,7 +1,7 @@
 @import "../theme.less";
 
 .form-control {
-  height: 45px;
+  height: 45px !important;
   background-color: @light-gray;
 
   &:focus {
@@ -29,6 +29,11 @@ label {
   width: 100px;
   display: inline-block;
   margin-bottom: 0;
+}
+
+select {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
 }
 
 .form-btn-group {
